# emqx-knowledge-base

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/api/: app.py  models.py  routes.py
app/models/: knowledge.py
app/prompts/: broker_agent_prompt.txt  broker_connection_error.txt  credentials_extraction_prompt.txt  emqx_tool_prompt.txt  log_analysis_prompt.txt  log_detection_prompt.txt  log_detection_user_prompt.txt  system_prompt.txt
app/services/: database.py  emqx_assistant.py  file_service.py  llama_index_service.py  openai_service.py  slack_service.py
app/utils/: emqx_api.py  logging.py  network.py
infra/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: generate_jwt.py  init_db.py
tests/: __init__.py  conftest.py  test_database_service.py  test_openai_service.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue
web/src/components/: Auth.vue  Search.vue
web/src/router/: index.js
web/src/views/: Assistant.vue  Home.vue  LogAnalysis.vue
